aws/tf-vpc/security_groups.tf
# SECURITY GROUPS #
# Nginx security group 
resource "aws_security_group" "linux-sg" {
  name   = "linux_sg"
  vpc_id = aws_vpc.vpc.id
  tags   = local.common_tags

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.sg_ingress]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "windows-sg" {
  name   = "windows_sg"
  vpc_id = aws_vpc.vpc.id
  tags   = local.common_tags

  # RDP access from anywhere local VPC
  ingress {
    from_port   = 3389
    to_port     = 3389
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr_block]
  }
  # WinRM access from anywhere local VPC
  ingress {
    from_port   = 5985
    to_port     = 5986
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr_block]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
